--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,8 @@
             android:label="@string/title_activity_fullscreen"
             android:theme="@style/FullscreenTheme" />
         <!-- 注册界面 -->
-        <activity android:name=".Register.RegisterActivity" />
+        <activity android:name=".Register.RegisterActivity"
+            android:windowSoftInputMode="stateHidden|stateAlwaysHidden"/>
         <!-- 注册的图片裁剪界面 -->
         <activity android:name=".CropActivity" />
 
