--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':toprightmenu', ':imagewatch', ':expandingpager', ':swipeback', ':bottomdialog'
+include ':app', ':toprightmenu', ':imagewatch', ':swipeback', ':bottomdialog'
