--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,45 +33,48 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    // 图像剪切
-    //滑动切换活动
-    // butter knife
-    //底部导航栏
-    //主界面右上角弹窗
-    compile project(':toprightmenu')
-    compile project(':imagewatch')
-    compile project(':swipeback')
-    compile project(':bottomdialog')
-    //网络框架Okhttp
-    //圆形图片
-    //Glide图形加载库
-    //material design库封装
-    //字体
-    //智能刷新框架
-    //网络框架
-    //选择城市库
-    //选择器的库
-    compile 'com.kevin:crop:1.0.2'
-    compile 'com.github.johnkil.android-robototextview:robototextview:2.5.0'
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
+    //Android
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    //滑动切换活动
+    compile project(':swipeback')
+    //主界面右上角弹窗
+    compile project(':toprightmenu')
+    //图片查看器
+    compile project(':imagewatch')
+    //底部弹窗
+    compile project(':bottomdialog')
+    //网络框架Okhttp
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    //圆形图片
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    //Glide(图形加载库)
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    //Roboto字体
+    compile 'com.github.johnkil.android-robototextview:robototextview:2.5.0'
+    //智能刷新框架
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
-    compile 'cn.bmob.android:bmob-sdk:3.5.7'
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-    compile 'com.flyco.roundview:FlycoRoundView_Lib:1.1.4@aar'
-    compile 'com.github.chrisbanes.photoview:library:1.2.3'
+    //选择城市库
     compile 'liji.library.dev:citypickerview:3.1.5'
+    //选择器的库(滚动选择)
     compile 'com.contrarywind:Android-PickerView:3.2.7'
-    testCompile 'junit:junit:4.12'
+    // 图像剪切
+    compile 'com.kevin:crop:1.0.2'
+    //GSON(解析JSON数据)
+    compile 'com.google.code.gson:gson:2.8.2'
+    // butter knife(注解式绑定)
+    compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    //Bmob云SDK
+    compile 'cn.bmob.android:bmob-sdk:3.5.7'
+    //PhotoView(可对图片进行缩放)
+    compile 'com.github.chrisbanes.photoview:library:1.2.3'
+    //简易实现圆角矩形背景
+    compile 'com.flyco.roundview:FlycoRoundView_Lib:1.1.4@aar'
+    testCompile 'junit:junit:4.12'
 }
