--- a/imagewatch/build.gradle
+++ b/imagewatch/build.gradle
@@ -25,8 +25,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.github.chrisbanes.photoview:library:1.2.3'
+    //facebook的弹性动画库
     compile 'com.facebook.rebound:rebound:0.3.8'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    //大神JakeWharton的动画库
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
