--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion '26.0.3'
     aaptOptions.cruncherEnabled = false
     aaptOptions.useNewCruncher = false
@@ -18,7 +18,7 @@ android {
     defaultConfig {
         applicationId "com.xia.adgis"
         minSdkVersion 23
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -34,6 +34,11 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //Android
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     //滑动切换活动
     compile project(':swipeback')
     //主界面右上角弹窗
@@ -43,38 +48,39 @@ dependencies {
     //底部弹窗
     compile project(':bottomdialog')
     //网络框架Okhttp
-    //圆形图片
-    //Glide(图形加载库)
-    //Roboto字体
-    //智能刷新框架
-    //选择城市库
-    //选择器的库(滚动选择)
-    // 图像剪切
-    //GSON(解析JSON数据)
-    // butter knife(注解式绑定)
-    //Bmob云SDK
-    //PhotoView(可对图片进行缩放)
-    //简易实现圆角矩形背景
-    compile 'com.android.support:support-v4:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    //圆形图片
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    //Glide(图形加载库)
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    //Roboto字体
     compile 'com.github.johnkil.android-robototextview:robototextview:2.5.0'
+    //智能刷新框架
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
+    //选择城市库
     compile 'liji.library.dev:citypickerview:3.1.5'
+    //选择器的库(滚动选择)
     compile 'com.contrarywind:Android-PickerView:3.2.7'
+    // 图像剪切
     compile 'com.kevin:crop:1.0.2'
+    //GSON(解析JSON数据)
     compile 'com.google.code.gson:gson:2.8.2'
+    //butter knife(注解式绑定)
     compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'cn.bmob.android:bmob-sdk:3.5.7'
-    compile 'com.github.chrisbanes.photoview:library:1.2.3'
-    compile 'com.flyco.roundview:FlycoRoundView_Lib:1.1.4@aar'
-    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    //Bmob云SDK
+    compile 'cn.bmob.android:bmob-sdk:3.5.7'
+    //PhotoView(可对图片进行缩放)
+    compile 'com.github.chrisbanes.photoview:library:1.2.3'
+    //简易实现圆角矩形背景
+    compile 'com.flyco.roundview:FlycoRoundView_Lib:1.1.4@aar'
+    //facebook的弹性动画库
+    compile 'com.facebook.rebound:rebound:0.3.8'
+    //大神JakeWharton的动画库
+    compile 'com.nineoldandroids:library:2.4.0'
+    //密码显示的EditText
+    compile 'com.github.scottyab:showhidepasswordedittext:0.8'
+    //图片查看器
+    compile 'com.alexvasilkov:gesture-views:2.4.1'
 }
